# derivre

./: Cargo.toml
.github/workflows/: codeql.yml  rust.yml
benches/: remainder.rs
scripts/: bump.py  check.sh
src/: ast.rs  bytecompress.rs  deriv.rs  hashcons.rs  lib.rs  mapper.rs  nextbyte.rs  pp.rs  regex.rs  regexbuilder.rs  relevance.rs  remainder.rs  simplify.rs  syntax.rs
tests/: basic.rs  common.rs  emptiness.rs  fowler.rs
