[package]
name = "derivre"
version = "0.2.0"
edition = "2021"
authors = ["Michal Moskal <michal@moskal.me>"]
license = "MIT"
description = "A derivative-based regular expression engine"
repository = "https://github.com/microsoft/derivre"

[lib]
name = "derivre"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.95"
bytemuck = "1.21.0"
bytemuck_derive = "1.8.1"
hashbrown = "0.15.2"
regex-syntax = "0.8.5"

[dev-dependencies]
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.20"
bstr = { version = "1.11.3", default-features = false, features = ["std", "serde"] }

[[bin]]
name = "derivre"
path = "src/derivre.rs"

[features]
default = ["compress"]
# default = []
compress = []
